avoid snapshot overlapping

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .shadow {
   position: fixed;
+  top: 100%;
   width: 100%;
   height: 100vh;
   z-index: 0;
